# search_wikt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/search_wikt/: core.py
src/search_wikt/core/: core.py
